--- a/src/app/dashboard/fiche2/etude-cyto/etude-cyto.component.html
+++ b/src/app/dashboard/fiche2/etude-cyto/etude-cyto.component.html
@@ -20,7 +20,7 @@
   <span class="label">Laboratoire de cytogenetique</span>
   <mat-form-field appearance="fill">
     <mat-label>Labo Cyto </mat-label>
-    <mat-select [(value)]="cytogenetique.idLaboratoire"  name="idLabo" required>
+    <mat-select [(ngModel)]="cytogenetique.idLaboratoire" ngModel name="idLabo" required>
       <mat-option *ngFor="let item of laboratoires$ | async" [value]="item.id">{{item.nom}}</mat-option>
     </mat-select>
   </mat-form-field>
