--- a/src/app/dashboard/fiche2/histoire-familiale/histoire-familiale.component.html
+++ b/src/app/dashboard/fiche2/histoire-familiale/histoire-familiale.component.html
@@ -107,7 +107,7 @@
     <br>
     <mat-form-field>
       <input type="text" matInput placeholder="Arbre généalogique de Fonconie " ngModel name="Arbre_genea" required
-        [(ngModel)]="fiche1.arbreGenealogique"  #arbreGeneaInput="ngModel">
+        [(ngModel)]="fiche1.arbreGenealogique" #arbreGeneaInput="ngModel">
       <mat-error *ngIf="arbreGeneaInput.hasError('required')">arbreGenea must not be empty.</mat-error>
     </mat-form-field>
     <br>
@@ -115,11 +115,28 @@
     <span class="label">Arbre généalogique de cancer </span>
     <button mat-raised-button color="primary">+ charger fichier</button>
 
+
+    <!--
+      jjjjjjjjjjjjjjj
+    -->
+
+
+
+
+
+
+
+
+
+    <!--
+      jjjjjjjjjjjjjjj
+    -->
+
     <br>
 
     <mat-form-field>
       <input type="text" matInput placeholder="Arbre généalogique de cancer" ngModel name="Arbre_gen_cancer" required
-        [(ngModel)]="fiche1.arbreGenealogiqueCancer"  #arbreGeneacanInput="ngModel">
+        [(ngModel)]="fiche1.arbreGenealogiqueCancer" #arbreGeneacanInput="ngModel">
       <mat-error *ngIf="arbreGeneacanInput.hasError('required')">arbreGeneacan must not be empty.</mat-error>
     </mat-form-field>
 
